# One_Keyboard

./: build.gradle  local.properties
common/: Android.bp
java/: Android.bp  AndroidManifest.xml
java/res/drawable/: action_key_background_lightlxx.xml  btn_keyboard_key_functional_lxx_dark.xml  btn_keyboard_key_functional_lxx_light.xml  btn_keyboard_key_lxx_dark.xml  btn_keyboard_key_lxx_light.xml  btn_keyboard_key_popup_lxx_light.xml  btn_keyboard_spacebar_lxx_dark.xml  btn_keyboard_spacebar_lxx_light.xml  dark_key_background.xml  key_background.xml  key_preview_default.xml  keyboard_key_feedback_you.xml  morekeys_light_background.xml  shift_key_background_lxx_light.xml  sym_keyboard_space_you.xml
java/res/layout/: main_keyboard_frame.xml
java/res/values/: colors.xml  strings-appname.xml  strings.xml  themes-lxx-dark.xml  themes-lxx-light.xml
java/res/values-af/: strings-appname.xml
java/res/values-am/: strings-appname.xml
java/res/values-ar/: strings-appname.xml
java/res/values-as/: strings-appname.xml
java/res/values-az/: strings-appname.xml
java/res/values-b+sr+Latn/: strings-appname.xml
java/res/values-be/: strings-appname.xml
java/res/values-bg/: cm_strings.xml  strings-appname.xml
java/res/values-bn/: strings-appname.xml
java/res/values-bs/: strings-appname.xml
java/res/values-ca/: strings-appname.xml
java/res/values-cs/: strings-appname.xml
java/res/values-el/: strings-appname.xml
java/res/values-en-rCA/: strings-appname.xml
java/res/values-en-rXC/: strings-appname.xml
java/res/values-es/: strings-appname.xml
java/res/values-es-rUS/: strings-appname.xml
java/res/values-et/: strings-appname.xml
java/res/values-fr-rCA/: strings-appname.xml
java/res/values-gl/: strings-appname.xml
java/res/values-hi/: strings-appname.xml
java/res/values-in/: strings-appname.xml
java/res/values-it/: strings-appname.xml
java/res/values-km/: strings-appname.xml
java/res/values-kn/: strings-appname.xml
java/res/values-ky/: strings-appname.xml
java/res/values-lo/: strings-appname.xml
java/res/values-lt/: strings-appname.xml
java/res/values-mk/: strings-appname.xml
java/res/values-ms/: strings-appname.xml
java/res/values-nl/: strings-appname.xml
java/res/values-pl/: strings-appname.xml
java/res/values-pt/: strings-appname.xml
java/res/values-pt-rPT/: cm_strings.xml  strings-appname.xml
java/res/values-ro/: strings-appname.xml
java/res/values-ru/: strings-appname.xml
java/res/values-si/: strings-appname.xml
java/res/values-sk/: strings-appname.xml
java/res/values-sl/: strings-appname.xml
java/res/values-sv/: strings-appname.xml
java/res/values-sw/: strings-appname.xml
java/res/values-th/: strings-appname.xml
java/res/values-tl/: strings-appname.xml
java/res/values-uk/: strings-appname.xml
java/res/values-vi/: strings-appname.xml
java/res/values-zu/: strings-appname.xml
java/res/xml/: key_emoji.xml  key_space_5kw.xml  key_styles_common.xml  key_styles_currency.xml  key_styles_enter.xml  key_styles_number.xml  method.xml  prefs.xml  prefs_screen_advanced.xml  prefs_screen_debug.xml  prefs_screen_preferences.xml  rowkeys_greek2.xml  rowkeys_greek3.xml  rows_arabic.xml  rows_azerty.xml  rows_bengali.xml  rows_bengali_akkhor.xml  rows_bepo.xml  rows_bulgarian.xml  rows_bulgarian_bds.xml  rows_bulgarian_bekl.xml  rows_colemak.xml  rows_dvorak.xml  rows_east_slavic.xml  rows_farsi.xml  rows_georgian.xml  rows_greek.xml  rows_hebrew.xml  rows_hindi.xml  rows_hindi_compact.xml  rows_kannada.xml  rows_malayalam.xml  rows_marathi.xml  rows_mongolian.xml  rows_nepali_romanized.xml  rows_nepali_traditional.xml  rows_nordic.xml  rows_qwerty.xml  rows_qwertz.xml  rows_serbian_qwertz.xml  (+8 more)
java/res/xml-sw600dp/: key_styles_common.xml  key_styles_enter.xml  rows_arabic.xml  rows_azerty.xml  rows_bengali.xml  rows_bengali_akkhor.xml  rows_bepo.xml  rows_bulgarian.xml  rows_bulgarian_bds.xml  rows_bulgarian_bekl.xml  rows_colemak.xml  rows_dvorak.xml  rows_east_slavic.xml  rows_farsi.xml  rows_georgian.xml  rows_greek.xml  rows_hebrew.xml  rows_hindi.xml  rows_hindi_compact.xml  rows_kannada.xml  rows_malayalam.xml  rows_marathi.xml  rows_mongolian.xml  rows_nepali_romanized.xml  rows_nepali_traditional.xml  rows_nordic.xml  rows_qwerty.xml  rows_qwertz.xml  rows_serbian_qwertz.xml  rows_sinhala.xml  rows_south_slavic.xml  rows_spanish.xml  rows_swiss.xml  rows_symbols.xml  rows_symbols_shift.xml  rows_tamil.xml  rows_telugu.xml  rows_uzbek.xml
java/res/xml-sw600dp-land/: rows_qwerty.xml
java/src/com/android/inputmethod/keyboard/: KeyboardSwitcher.java  KeyboardView.java
java/src/com/android/inputmethod/keyboard/emoji/: EmojiLayoutParams.java  EmojiPalettesView.java
java/src/com/android/inputmethod/latin/: DictionaryDumpBroadcastReceiver.java  DictionaryFacilitator.java  DictionaryPackInstallBroadcastReceiver.java  OneKeyboard.java  RichInputConnection.java
java/src/com/android/inputmethod/latin/inputlogic/: InputLogic.java  InputLogicHandler.java
java/src/com/android/inputmethod/latin/utils/: ResourceUtils.java
native/jni/: CMakeLists.txt
tests/src/com/android/inputmethod/latin/: BlueUnderlineTests.java  InputLogicTests.java  InputLogicTestsDeadKeys.java  InputLogicTestsLanguageWithoutSpaces.java  InputTestsBase.java  LatinImeTests.java  OneKeyboardForTests.java  PunctuationTests.java  ShiftModeTests.java
